继续编辑SLAM框架；

--- a/_posts/2019-12-28-slam.md
+++ b/_posts/2019-12-28-slam.md
@@ -9,9 +9,18 @@ cover: /image/posts/2019-12-29/0.architecture.png
 
 ![architecture-all](/image/posts/2019-12-29/0.architecture-all.png)
 
-最近看了杨亮的[公开课](https://www.bilibili.com/video/av57489697?from=search&seid=11934455325816846080)，了解了SLAM涉及到的研究领域，包括基本理论、传感器、地图、位姿估计与融合、回路和图优化以及深度学习相关六大领域。
+最近看了杨亮的课程视频，了解了SLAM涉及到的研究领域，包括基本理论、传感器、地图、位姿估计与融合、回路和图优化以及深度学习相关六大领域。
 
 <!--more-->
+
+SLAM(Simultaneous Localization And Mapping)于1986年由Peter Cheeseman, Jim Crowley和Hugh Durrant Whyte等人提出。在此之前，机器人的位置都是通过积分的方式来计算，随着时间的推移，累积误差会越来越大。在此之后，SLAM经历过三大里程碑式的发展：
+- EKF：即扩展卡尔曼滤波，在卡尔曼滤波的基础上，假设噪声满足高斯分布，通过贝叶斯概率持续矫正机器人位姿。
+- Fast-SLAM：即使用粒子滤波算法，用概率统计的方法解决了EKF假设噪声满足高斯分布的限制。
+- Graph-SLAM：使用图优化方法进行定位。
+
+目前定位使用的传感器主要分为视觉和激光两类：
+- 视觉：最早使用视觉进行SLAM的是Javier Civera, Andrew J. Davision，当时使用的是EKF方法；后续Georg Klein, David Murray使用多线程图优化进行SLAM，主要项目是PTAM-SLAM（Parallel Tracking And Mapping），后续还出现了RGBD-SLAM、ORB-SLAM、LSD-SLAM等。
+- 激光：早期是GMapping、SLAM6D等方法；后续Ji Zhang的LOAM、V-LOAM加入了特征提取进行SLAM；Google开源了Cartographer项目进行激光SLAM。
 
 ### 一、基本理论
 
