--- a/_posts/2019-12-28-slam.md
+++ b/_posts/2019-12-28-slam.md
@@ -93,13 +93,24 @@ $$\sigma_f^2 = \sigma_1^2-K*\sigma_1^2$$
 
 $$ K = \frac{\sigma_1^2}{\sigma_1^2+\sigma_2^2} $$
 
+已知，$u_1$是根据里程计数据对前进距离的预测结果，也就是说$u_1$是个估计值，$u_2$是激光测量后得到的前进距离的结果，是个测量值，下面我们切换一下表达的方式。
+
+假设状态使用$x$表示，当前的预测值由上一次的最优估计（后验估计）加上控制量$u$来进行线性预测：
+
+$$\hat{x}_k^- = A\hat{x}_{k-1} + Bu_k $$
+
+$\hat{x}$ 表示估计值，$^-$表示先验估计，在上面的例子中对应为在里程计按照速度$v$行驶$\Delta{t}$时间后预测当前的位置$u_{1,t} = u_{1,t-1} + v * \Delta{t}$。
+
+假设测量值使用$y$表示，测量值与后验估计值之间存在线性关系，在上面的例子中对应为：假设上一时刻激光检测到前方障碍物距离为$y_{k-1}$，那么前进了$\Delta{x}$距离后，当前时刻检测到前方障碍物距离应当为$y_k = y_{k-1} - \Delta{x}$，即$y_k = - x_k + C$，在实际项目中，往往从测量值结果$y$转化到$x$不是很方便，我们就直接使用测量值带入公式进行计算：
+
+$$y_k = H x_k$$
+
+
 ---
 
 未完待续
 
-<!-- 已知，$u_1$是根据里程计数据对前进距离的预测结果，
-
-
+<!-- 
 
 ### 二、传感器
 
